# Libreria_federated_rolann

./: README.md  example.py  example_2.py  example_3.py  pyproject.toml  requirements.txt
examples/: example_4.py
federated_rolann/: __init__.py  core.py  encrypted.py
federated_rolann/federated/: client.py  coordinator.py
rolann_federated/: __init__.py  encrypted.py  example.py
rolann_federated/federated/: client.py  coordinator.py
